--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -11,7 +11,7 @@
             <strong>{{ boldmessage }}</strong><br />
         </div> 
         <div><a href="/rango/about/">About</a><br />
-        <img src="{% static 'images/love.png' %}"
+        <img src="{% static 'images/rango.png' %}"
             alt="Picture of Rango" />
         </div>
     </body>
