--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html>  
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
-        <div>
-    {% if category %}
-        <h1>{{ category.name }}</h1>
-        {% if pages %}
-        <ul>
-            {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-        <strong>No pages currently in category.</strong>
-        {% endif %}
-        <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br />
-    {% else %}
-        The specified category does not exist.
-    {% endif %}
-        </div>
-        <a href="/rango/">Index</a>
-    </body>
-2</html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+{% block title_block %}
+    About Rango
+{% endblock %}
+{% block body_block %}
+<h1>Rango says...</h1>
+<div>
+    here is the about page. <br />
+    This tutorial has been put together by David Maxwell.<br />
+</div>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+{% endblock %} 
