--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
+{% block title_block %}
+    About Rango
+{% endblock %}
+{% block body_block %}
         <h1>Rango says...</h1>
         <div>
             here is the about page. <br />
             This tutorial has been put together by Changjian Zhao. <br />
         </div> 
-        <div>
-            <a href="/rango/">Indix</a><br />
         <img src="{% static 'images/Rango.jpg' %}" alt="Picture of Rango" />
         <img src="{{ MEDIA_URL }}cat.jpg"  alt="Picture of a Cat" />
-        </div>
-    </body>
-</html>
+{% endblock %}
