--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load rango_template_tags %}
 <html>
-    <head>
+    <head lang="en">
+        <meta charset="UTF-8" />
         <title>
             Rango -
             {% block title_block %}
@@ -14,6 +16,11 @@
             {% block body_block %}
             {% endblock %}
         </div>
+        <div>
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
+        </div>>
             <hr />
             <div>
                     <ul>
@@ -23,5 +30,4 @@
                     </ul>
             </div>
     </body>
-
 </html>
