--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,14 +1,28 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
 {% block title_block %}
-    About Rango
+{% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
 {% endblock %}
+
 {% block body_block %}
-<h1>Rango says...</h1>
-<div>
-    here is the about page. <br />
-    This tutorial has been put together by David Maxwell.<br />
-</div>
-<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+    {% if category %}
+    <h1>{{ category.name }}</h1>
+    {% if pages %}
+    <ul>
+        {% for page in pages %}
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <strong>No pages currently in category.</strong>
+    {% endif %}
+
+    <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+    {% else %}
+    The specified category does not exist.
+    {% endif %}
 {% endblock %} 
