--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -8,6 +8,7 @@
         <div>
             here is the about page. <br />
             This tutorial has been put together by Changjian Zhao. <br />
+            <p>Visits: {{ visits }}</p>
         </div> 
         <img src="{% static 'images/Rango.jpg' %}" alt="Picture of Rango" />
         <img src="{{ MEDIA_URL }}cat.jpg"  alt="Picture of a Cat" />
